@@ -25,6 +25,7 @@ package org.gjt.sp.jedit.buffer;
 import java.util.*;
 import javax.swing.text.Segment;
 import org.gjt.sp.jedit.Buffer;
+import org.gjt.sp.jedit.MiscUtilities;
 import org.gjt.sp.jedit.ServiceManager;
 import org.gjt.sp.util.Log;
 
@@ -178,6 +179,7 @@ public abstract class FoldHandler
 			foldModes[i + newApi.length] = handlers[i].getName();
 		}
 
+		Arrays.sort(foldModes,new MiscUtilities.StringCompare());
 		return foldModes;
 	}
 	//}}}
